fix(gui): clean display property controls